finished fitting models

--- a/Bryan_Combs/Aquire_Redit_Data.ipynb
+++ b/Bryan_Combs/Aquire_Redit_Data.ipynb
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,14 +665,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests \n",
     "after = None\n",
+    "url = 'https://www.reddit.com/r/books/.json'\n",
     "#url = 'https://www.reddit.com/r/democrats/.json'\n",
-    "url = 'https://www.reddit.com/r/StarWars/.json'\n",
+    "#url = 'https://www.reddit.com/r/StarWars/.json'\n",
     "#code below is the loop to get the data and save it to the dataframe"
    ]
   },
@@ -685,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -695,37 +696,43 @@
      "output_type": "stream",
      "text": [
       "0 None\n",
-      "26 t3_9dvtri\n",
-      "51 t3_9do5nj\n",
-      "76 t3_9do5ls\n",
-      "101 t3_9diwkq\n",
-      "126 t3_9d7qa6\n",
-      "151 t3_9de4p1\n",
-      "176 t3_9d14if\n",
-      "201 t3_9d55oq\n",
-      "226 t3_9csc3j\n",
-      "251 t3_9cngl6\n",
-      "276 t3_9cjorr\n",
-      "301 t3_9cljce\n",
-      "326 t3_9c9mbo\n",
-      "351 t3_9ceq28\n",
-      "376 t3_9bz546\n",
-      "401 t3_9byr5m\n",
-      "426 t3_9bv6ex\n",
-      "451 t3_9bo5ux\n",
-      "476 t3_9bmxn7\n",
-      "501 t3_9bjiia\n",
-      "526 t3_9bhrbv\n",
-      "551 t3_9b8snf\n",
-      "576 t3_9b6bt7\n",
-      "601 t3_9bay58\n",
-      "626 t3_9b26tw\n",
-      "651 t3_9b1cnl\n"
+      "27 t3_9du9gr\n",
+      "52 t3_9dljvk\n",
+      "77 t3_9d90kx\n",
+      "102 t3_9d6asg\n",
+      "127 t3_9d291m\n",
+      "152 t3_9cpnxg\n",
+      "177 t3_9coqm2\n",
+      "202 t3_9cfxas\n",
+      "227 t3_9c1uzt\n",
+      "252 t3_9bop1a\n",
+      "277 t3_9bkj99\n",
+      "302 t3_9basrw\n",
+      "327 t3_9b4lzq\n",
+      "352 t3_9asz0d\n",
+      "377 t3_9agn0p\n",
+      "402 t3_9aklee\n",
+      "420 None\n",
+      "447 t3_9du9gr\n",
+      "472 t3_9dljvk\n",
+      "497 t3_9d90kx\n",
+      "522 t3_9d6asg\n",
+      "547 t3_9d291m\n",
+      "572 t3_9cpnxg\n",
+      "597 t3_9coqm2\n",
+      "622 t3_9cfxas\n",
+      "647 t3_9c1uzt\n",
+      "672 t3_9bop1a\n",
+      "697 t3_9bkj99\n",
+      "722 t3_9basrw\n",
+      "747 t3_9b4lzq\n",
+      "772 t3_9asz0d\n",
+      "797 t3_9agn0p\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(27):  # for loop to his reddit mulitiple times.  \n",
+    "for _ in range(33):  # for loop to his reddit mulitiple times.  \n",
     "    if after == None:\n",
     "        current_url = url\n",
     "    else: \n",
@@ -745,21 +752,22 @@
     "    after = current_dict['data']['after']\n",
     "    \n",
     "    time.sleep(4)\n",
-    "    pd.DataFrame(posts).to_csv('./data/starwars.csv', index = False)\n",
+    "    pd.DataFrame(posts).to_csv('./data/books.csv', index = False)\n",
+    "    #pd.DataFrame(posts).to_csv('./data/starwars.csv', index = False)\n",
     "   # pd.DataFrame(posts).to_csv('./data/democratic.csv', index = False)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "676\n"
+      "822\n"
      ]
     }
    ],
@@ -781,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,21 +798,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "focus": false,
     "id": "783fd153-28ac-47ab-bfca-27e7c1de95b4"
    },
    "outputs": [],
    "source": [
-    "url = 'https://www.reddit.com/r/startrek/.json'\n",
+    "url = 'https://www.reddit.com/r/television/.json'\n",
+    "#url = 'https://www.reddit.com/r/startrek/.json'\n",
     "#url = 'https://www.reddit.com/r/Conservative/.json'\n",
     "after_r = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -814,38 +823,44 @@
      "output_type": "stream",
      "text": [
       "0 None\n",
-      "26 t3_9diu7j\n",
-      "51 t3_9d7gif\n",
-      "76 t3_9d2h0l\n",
-      "101 t3_9crs9z\n",
-      "126 t3_9ciab0\n",
-      "151 t3_9cbtd3\n",
-      "176 t3_9c8sg9\n",
-      "201 t3_9c2s6d\n",
-      "226 t3_9bzcj8\n",
-      "251 t3_9bnjkf\n",
-      "276 t3_9b048b\n",
-      "301 t3_9ayh8a\n",
-      "326 t3_9b4t93\n",
-      "351 t3_9akpap\n",
-      "376 t3_9ag81m\n",
-      "401 t3_9a5ste\n",
-      "426 t3_9a7oyw\n",
-      "451 t3_99ioq3\n",
-      "476 t3_99ldct\n",
-      "501 t3_994arr\n",
-      "526 t3_99bh9g\n",
-      "551 t3_98sq5f\n",
-      "576 t3_98qvk5\n",
-      "601 t3_98j53v\n",
-      "626 t3_98fnut\n",
-      "651 t3_988b88\n"
+      "27 t3_9dw25u\n",
+      "52 t3_9dypct\n",
+      "77 t3_9dk5mr\n",
+      "102 t3_9de45v\n",
+      "127 t3_9dbedd\n",
+      "152 t3_9d85ej\n",
+      "177 t3_9dbv7d\n",
+      "202 t3_9d10cl\n",
+      "227 t3_9d2ag8\n",
+      "252 t3_9cycbk\n",
+      "277 t3_9ckb0t\n",
+      "302 t3_9cq71y\n",
+      "327 t3_9cdw34\n",
+      "352 t3_9cpukz\n",
+      "377 t3_9c9u1y\n",
+      "402 t3_9bpjz4\n",
+      "427 t3_9bu1xx\n",
+      "452 t3_9btp8l\n",
+      "477 t3_9bw2i8\n",
+      "502 t3_9bq3hk\n",
+      "527 t3_9bdwyw\n",
+      "552 t3_9b7aly\n",
+      "577 t3_9b1ly1\n",
+      "602 t3_9bd4ph\n",
+      "627 t3_9bd4fx\n",
+      "652 t3_9b5djx\n",
+      "677 t3_9ao4yz\n",
+      "689 None\n",
+      "716 t3_9dw25u\n",
+      "741 t3_9dypct\n",
+      "766 t3_9dk5mr\n",
+      "791 t3_9de45v\n"
      ]
     }
    ],
    "source": [
     "#set up the same for loop for conservative posts from this subredit\n",
-    "for _ in range(27):  # for loop to his reddit mulitiple times.  \n",
+    "for _ in range(33):  # for loop to his reddit mulitiple times.  \n",
     "    if after_r == None:\n",
     "        current_url = url\n",
     "    else: \n",
@@ -866,7 +881,8 @@
     "        \n",
     "    after_r = current_dict['data']['after']\n",
     "    time.sleep(4) #time between scrapes\n",
-    "    pd.DataFrame(posts_r).to_csv('./data/startrek.csv', index = False)\n",
+    "    pd.DataFrame(posts_r).to_csv('./data/tv.csv', index = False)\n",
+    "    #pd.DataFrame(posts_r).to_csv('./data/startrek.csv', index = False)\n",
     "    #ran on three different reddits by changing the commented out lines\n",
     "    #pd.DataFrame(posts_r).to_csv('./data/republican.csv', index = False)"
    ]
