--- a/Bryan_Combs/Merge_Redit_Files_and_prepare_for_analysis.ipynb
+++ b/Bryan_Combs/Merge_Redit_Files_and_prepare_for_analysis.ipynb
@@ -2608,6 +2608,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     State of the Subreddit: Flairs, Spoilers and C...\n",
+      "1     Chris Pine says he would love to do Star Trek ...\n",
+      "2     Thanks to Star Trek for making me feel like hu...\n",
+      "3                     Episodes to show an Ethics major?\n",
+      "4     Who are your overall 3 favorite and overall 3 ...\n",
+      "5     What do you think about J. Michael Straczynski...\n",
+      "6     Besides \"JANEWAY MURDERED TUVIX\" what in-unive...\n",
+      "7     What if Broken Bow, the Pilot of Enterprise, a...\n",
+      "8                              Trek Podcasts on Spotify\n",
+      "9     Recommendations on NX-01 model? What company i...\n",
+      "10    CBS reportedly negotiating exit for CEO Les Mo...\n",
+      "11    Is it just me or does the Federation really ne...\n",
+      "12    Would you prefer if future Star Trek movies fe...\n",
+      "13    Which captain would you feel the most comforta...\n",
+      "14                   Recommended watch order after TNG?\n",
+      "15                                       Trek in the UK\n",
+      "16    Just finished all 7 seasons of DS9. Sad that i...\n",
+      "17    I made this dumb little thing a while back. Ma...\n",
+      "18    What are everyone’s thoughts on Star Trek: Fed...\n",
+      "19    Do you think in the 29th Century that Professo...\n",
+      "20                           Wolf 359: Voyager plothole\n",
+      "21    ‘Star Trek: Discovery’ Designers Discuss Moder...\n",
+      "22                     Anyone for a good old sing-song?\n",
+      "23    Krall and his Goons in Star Trek Beyond all lo...\n",
+      "24                            How did you fall in love?\n",
+      "25    Chief O'Brien is free of the Enterprise and he...\n",
+      "26    What was it like having TNG and DS9 as a first...\n",
+      "27    Spock: Coming in November (Preview for Unifica...\n",
+      "28    Star Trek Discovery and Patrick Stewart Returning\n",
+      "29    Just showed my boyfriend the Wolf 359 episodes...\n",
+      "                            ...                        \n",
+      "70    Netflix Reveals Which STAR TREK Episodes Are M...\n",
+      "71                     Deep Space 9's Command Structure\n",
+      "72    ELI5 Tardigrades sueing STDisc and Chris Pine ...\n",
+      "73    Jammer:Pondering Patrick Stewart’s return to t...\n",
+      "74    Request For Questions - Upcoming Trekspertise ...\n",
+      "75    Has there been any word on when the Short Trek...\n",
+      "76                                        Star trek RPG\n",
+      "77    Man of the People is an underrated episode. Th...\n",
+      "78    Review: ‘Star Trek: Lost Scenes’ Is An Engagin...\n",
+      "79    Could Tig Notaro's slipped comment hint to ide...\n",
+      "80    The Klingon on the far left of the High Counci...\n",
+      "81    Enterprise - Terra Prime - Why did Paxton both...\n",
+      "82                        Genetically engineered Humans\n",
+      "83                              Pondering Picard Series\n",
+      "84    TNG - Samaritan Snare - Klingons Joined the Fe...\n",
+      "85    Is there a movie or some other series with a s...\n",
+      "86    Sometimes I really wish that Moonves gave Netf...\n",
+      "87         How a scene in “Bloodlines” should have gone\n",
+      "88     Why do people dislike Neelix and Kes on Voyager?\n",
+      "89                Reception of TNG when it first aired?\n",
+      "90                          Autobiographies by the Cast\n",
+      "91    TNG's Special Effects - 15 min documentary on ...\n",
+      "92    Marina Sirtis on Twitter: \"The gang’s all here...\n",
+      "93        New to Star Trek, struggling to keep watching\n",
+      "94    Watching \"Time Squared\" for the upteenth time,...\n",
+      "95                        Quick Voyager trivia question\n",
+      "96    Sorry In Advance... Watch Order VOY 1-2 before...\n",
+      "97       Which Star Trek episode or maybe it’s a movie?\n",
+      "98                      Paramount/CBS crossover content\n",
+      "99    CBS is considering Spin-Offs for every Discove...\n",
+      "Name: title, Length: 100, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print out titles for analysis by people\n",
+    "print(comb_space.title[0:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
