trying out readme

--- a/Bryan_Combs/Look_at_Missclassifications.ipynb
+++ b/Bryan_Combs/Look_at_Missclassifications.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Misclassification\n",
+    "\n",
+    "It often helps understand what a model is doing to look at the predictions that were correct and incorrect.  I also wanted a list of predictions so that I could test some of the data on humans to see how the model was similar to and different from human Classifers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
